# reeve

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  dist-workspace.toml
.githooks/: pre-commit
crates/aibom-cli/: Cargo.toml
crates/aibom-cli/src/: main.rs  registry_match.rs  registry_pagination.rs
crates/aibom-cli/tests/: cli_e2e.rs  scan_profile_smoke.rs
crates/aibom-cli/tests/common/: mod.rs
crates/aibom-cli/tests/data/cli-scan-target/.cursor/: mcp.json
crates/aibom-cli/tests/data/mcp-registry/: ghsa-advisories.json  nvd-advisories.json  official-page.json  osv-advisories.json  seed-with-packages.json
crates/aibom-cli/tests/data/mcp-registry/pagination/: page-1.json  page-2.json  page-empty.json
crates/aibom-core/: Cargo.toml
crates/aibom-core/src/: adapter.rs  lib.rs
crates/aibom-policy/: Cargo.toml  build.rs
crates/aibom-policy/bundles/: 0.1.0.provenance.json  0.1.1.provenance.json  0.1.1.wasm  0.1.2.provenance.json  0.1.3.provenance.json  0.2.0.provenance.json  0.2.0.wasm  0.2.1.provenance.json  0.2.2.provenance.json  0.2.3.provenance.json  0.2.3.wasm  0.2.4.provenance.json  0.2.4.wasm  0.3.0.provenance.json  0.3.0.wasm  0.3.1.provenance.json  0.3.10.provenance.json  0.3.11.provenance.json  0.3.2.provenance.json  0.3.3.provenance.json  0.3.4.provenance.json  0.3.5.provenance.json  0.3.6.provenance.json  0.3.7.provenance.json  0.3.8-rc.1.provenance.json  0.3.8-rc.2.provenance.json  0.3.8-rc.3.provenance.json  0.3.8-rc.4.provenance.json  0.3.8.provenance.json  0.3.9.provenance.json  0.3.9.wasm
crates/aibom-policy/src/: lib.rs
crates/aibom-policy/tests/: policy_engine.rs
crates/aibom-scanner/: Cargo.toml
crates/aibom-scanner/src/: lib.rs  sensitive_data.rs
crates/aibom-scanner/src/mcp/: capabilities.rs  client.rs  extension_deps.rs  fingerprint.rs  mod.rs  output.rs
crates/aibom-scanner/src/mcp/discovery/: antigravity.rs  claude_code.rs  claude_code_desktop.rs  claude_cowork.rs  claude_desktop.rs  codex_cli.rs  continue_dev.rs  cursor.rs  factory.rs  mod.rs  vscode_mcp.rs  zed.rs
crates/aibom-scanner/src/mcp/profile/: mod.rs
crates/aibom-scanner/src/mcp/profile/sandbox_profiles/: default.sb
crates/aibom-scanner/tests/: cowork_extensions.rs  cyclonedx_spec.rs  dedupe_surfaces.rs  discovery_surfaces.rs  empty_discovery.rs  granted_permissions.rs  introspect_stdio.rs  mcp_env_scrub.rs  profile_rigged.rs  redaction_guard.rs
crates/aibom-scanner/tests/data/: antigravity_1.json  antigravity_2.json  claude_code_1.json  claude_code_2.json  claude_code_permissions_1.json  claude_code_permissions_2.json  claude_code_project_settings_local_1.json  claude_cowork_config_state_1.json  claude_cowork_extensions_1.json  claude_cowork_extensions_2.json  claude_cowork_installed_plugins_1.json  claude_desktop_1.json  claude_desktop_trusted_folders_mac.json  claude_desktop_trusted_folders_win.json  claude_workspace_1.json  claude_workspace_2.json  codex_1.toml  codex_2.toml  codex_app_approvals_mac.toml  codex_app_approvals_win.toml  codex_app_plugins_mac.toml  codex_app_plugins_win.toml  codex_global_state_full_access_mac.json  codex_global_state_full_access_win.json  codex_permissions_2.toml  codex_project_approval_only_1.toml  continue_1.yaml  continue_2.yaml  cursor_1.json  cursor_2.json  cursor_project_1.json  cursor_project_2.json  cursor_project_enriched_http.json  cursor_project_enriched_stdio.json  factory_1.json  factory_2.json  local_claude_code_desktop_session_approvals_mac.json  local_claude_code_desktop_session_approvals_win.json  local_cowork_session_ambient_only.json  local_cowork_session_approvals_mac.json  (+7 more)
crates/aibom-scanner/tests/data/cyclonedx/: bom-1.5.schema.json
crates/aibom-scanner/tests/mcp/rigged-server/: server.py
crates/aibom-signer/: Cargo.toml
crates/aibom-signer/src/: bundle.rs  lib.rs  online.rs  statement.rs  verify.rs
crates/aibom-signer/tests/: online_smoke.rs
crates/aibom-validator/: Cargo.toml
crates/aibom-validator/src/: lib.rs
crates/aibom-validator/tests/: regenerator_idempotent.rs  sensitive_data_report_schema.rs
demo/: README.md  run.sh
docs/: README.md  adapter-roadmap.md  architecture.md  build-order.md  demo-archetypes.md  demo-script.md  deployment-scenarios.md  integrations.md  lab-infra.md  mcp-registry-api.md  mcp-registry-seed.md  pillar-launch-audit.md  positioning.md  reeve-product-brief.md  release-readiness.md  scope.md  signing.md  v1-spec.md
policies/: 00_main.rego  01-signature-required-production.rego  02-publisher-allowlist.rego  03-declared-observed-capability-match.rego  04-transport-allowlist.rego  05-maximum-scan-age.rego  06-no-undeclared-egress.rego  07-no-exec-without-capability.rego  08-trusted-package-source.rego  09-no-version-downgrade.rego  10-no-unsigned-mcp-strict.rego  11-no-unknown-extension-capability.rego  12-risky-grant.rego  13-sensitive-data-volume.rego  14-sensitive-secret-pattern.rego  README.md
schema/: SPEC.md  aibom-v0.1.0.json  (+5 more)
(+420 files in other folders)
