[package]
name = "aibom-cli"
description = "The inventory and trust layer for the AI supply chain"
homepage = "https://github.com/Reeve-Security/reeve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aibom-core = { path = "../aibom-core" }
aibom-policy = { path = "../aibom-policy" }
aibom-scanner = { path = "../aibom-scanner" }
aibom-signer = { path = "../aibom-signer" }
aibom-validator = { path = "../aibom-validator" }
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
tempfile.workspace = true
