[package]
name = "aibom-scanner"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aibom-core = { path = "../aibom-core" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
glob.workspace = true
regex = "1"
# Pinned to the version `regex` resolves so the AST `maximum_len()` bound used
# for streaming-span coverage matches the engine actually compiling the rule.
regex-syntax = "0.8"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
jsonschema.workspace = true
