[package]
name = "aibom-signer"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aibom-core = { path = "../aibom-core" }
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true

[dev-dependencies]
