[package]
name = "aibom-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aibom-core = { path = "../aibom-core" }
aibom-signer = { path = "../aibom-signer" }
base64.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
